# hupeyaszih-programming-language

./: .gitignore  CMakeLists.txt  README.md
example/: main.hrs  testing.hrs
include/: codegen.h  globals.h  h_vector.h  lexer.h  main.h  parser.h  symbol_table.h
include/backend/x86_64/: codegen_x86_64.h
include/core/: hrs_file_io.h  ir_dumper.h  ir_gen.h  ir_lower.h
include/opt/: opt.h
src/: codegen.c  h_vector.c  hrs_file_io.c  ir_dumper.c  ir_gen.c  ir_lower.c  lexer.c  main.c  parser.c  symbol_table.c
src/backend/x86_64/: codegen_x86_64.c
src/core/: hrs_file_io.c  ir_dumper.c  ir_gen.c  ir_lower.c  lexer.c  main.c  parser.c  symbol_table.c
src/opt/: opt.c
